tests/should_succeed/unused_variable.jou
def main() -> int:
    x = 4  # Warning: variable 'x' is never used
    return 0
