tests/syntax_error/var_without_type.jou
def main() -> int:
    var x = 1  # Error: there is no 'var' keyword in Jou
